Fix scaling on mobile display

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     padding: 0px;
     margin: 0px;
-    border: 0px solid blue;
+    border: 1px solid blue;
 }
 
 body {
@@ -10,8 +10,9 @@ body {
 }
 
 .container {
-    width: 600px;
-    padding: 16px;
+    max-width: 600px;
+    width: 100%;
+    padding: 20px 10px;
     display: block;
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -21,7 +22,7 @@ body {
     margin: auto;
     padding-top: 20px;
     padding-bottom: 8px;
-    width: 480px;
+    max-width: 480px;
     display: flex;
     gap: 20px;
 }
@@ -65,7 +66,7 @@ button:hover {
 }
 
 #score-text {
-    width: 470px;
+    max-width: 470px;
     margin: auto;
     padding: 5px;
     background-color: rgb(128, 126, 124);
